test/types/string/assignToChar/testCall.8.good
Helpers.chpl:26: In function 'testCallVal':
Helpers.chpl:30: error: unresolved call 'foo(string)'
Helpers.chpl:27: note: this candidate did not match: foo(y: int(8))
Helpers.chpl:30: note: because actual argument #1 with type 'string'
Helpers.chpl:27: note: is passed to formal 'y: int(8)'
  testCall.chpl:20: called as testCallVal(strBytes: string, type toType = int(8))
